# DeepModellingStochasticProcesses

./: .gitignore  README.md  pyproject.toml  setup.py
configs/: dev.yaml  dmsp.yaml  funky_wiener_experiment.yaml  lake_experiment.yaml  solar_experiment.yaml  toy_experiment.yaml  wiener_experiment.yaml  yfinance_experiment.yaml
configs/data_loader/: funky_wiener.yaml  lake.yaml  solar.yaml  toy.yaml  wiener.yaml  yfinance.yaml
configs/networks/gan/: big_mlp_discriminator.yaml  big_mlp_generator.yaml  medium_cnn_discriminator.yaml  medium_cnn_generator.yaml  medium_lstm_discriminator.yaml  medium_lstm_generator.yaml  medium_mlp_generator.yaml  tiny_mlp_discriminator.yaml
configs/networks/sad_emilie/: medium_lstm.yaml  medium_rnn.yaml  medium_s4.yaml
configs/networks/sdmle/: big_mlp.yaml  medium_cnn.yaml  medium_lstm.yaml  medium_mlp.yaml  medium_s4.yaml  tiny_mlp.yaml
configs/trainer/: big_gan.yaml  big_sdmle.yaml  big_slt.yaml  big_vae.yaml  gan.yaml  medium_gan.yaml  medium_lstm_gan.yaml  medium_sdmle.yaml  medium_slt.yaml  medium_vae.yaml  sad_emilie.yaml  sdmle.yaml  slt.yaml  solar_slt.yaml  tiny_gan.yaml  tiny_sdmle.yaml  tiny_slt.yaml  tiny_vae.yaml  toy_slt.yaml  vae.yaml
dmsp/: __init__.py
dmsp/applications/: visualize_prices.py
dmsp/datasets/: base_loader.py  loader.py  toy_loader.py
dmsp/experiment/: __init__.py  config.py  experiment.py  main.py
dmsp/models/: __init__.py  base_model.py
dmsp/noise/: base_noise.py
dmsp/utils/: numpy_dataset.py  output_shape_calculators.py  process_data.py
scripts/: activate.sh  run.sh
(+45 files in other folders)
